Corrigido chamada pagina sobre no template menu principal

--- a/WebContent/include/menuPrincipal.xhtml
+++ b/WebContent/include/menuPrincipal.xhtml
@@ -18,7 +18,7 @@
 				outcome="/pages/usuario.xhtml"/>
 
 			<p:menuitem icon="ui-icon-comment" value="Sobre"
-				onclick="PF('dialogoSobre').show();" />
+				outcome="/pages/sobre.xhtml" />
 
 			<p:menuitem icon="ui-icon-locked" value="Login"
 				outcome="/pages/login.xhtml" />
