Acrescentado relatório ao menu

--- a/WebContent/include/menuPrincipal.xhtml
+++ b/WebContent/include/menuPrincipal.xhtml
@@ -17,6 +17,9 @@
 			<p:menuitem icon="ui-icon-person" value="Usuários"
 				outcome="/pages/usuario.xhtml"/>
 
+			<p:menuitem icon="ui-icon-comment" value="Relatório"
+				outcome="/pages/relatorioContato.xhtml" />
+			
 			<p:menuitem icon="ui-icon-comment" value="Sobre"
 				outcome="/pages/sobre.xhtml" />
 
